--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.8ba87647.js"></script>
-  <link rel="stylesheet" href="/assets/index.f1cd3b0c.css">
+  <script type="module" crossorigin src="/vite-react-three.js-typescript-mui-template/assets/index.8ba87647.js"></script>
+  <link rel="stylesheet" href="/vite-react-three.js-typescript-mui-template/assets/index.f1cd3b0c.css">
 </head>
 
 <body>
